# job_search_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
electron-frontend/: main.js  package-lock.json  package.json  preload.js
electron-frontend/renderer/: dashboard.js  index.html  styles.css
frontend/: main.js  package-lock.json  package.json
src/job_application_agent/: __init__.py  __main__.py
src/job_application_agent/ai/: cover_letter_generator.py  job_matcher.py
src/job_application_agent/automation/: application_handler.py
src/job_application_agent/core/: agent.py  config.py  database.py  encryption.py  notifications.py  scheduler.py
src/job_application_agent/models/: job.py
src/job_application_agent/scrapers/: base_scraper.py  indeed_scraper.py  linkedin_scraper.py  naukri_scraper.py  scraper_manager.py
src/job_application_agent/utils/: logger.py
